--- a/tienda_online/app_tienda/templates/front.html
+++ b/tienda_online/app_tienda/templates/front.html
@@ -7,10 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-   <h1>Bienvenido a la tienda online!!!</h1> 
 
-   <script src="{{url_for('static', filename = 'consumir.js')}}"></script
-
-   
+    <link href="{{ url_for('static', filename='consumir.js') }}">
 </body>
 </html>
