--- a/tienda_online/app_tienda/templates/registro.html
+++ b/tienda_online/app_tienda/templates/registro.html
@@ -5,6 +5,12 @@
   <div class="container py-5 h-100">
 <form method="post">
   <!-- Name input -->
+
+  <div class="form-outline mb-4">
+    <input type="text" name="id" class="form-control" />
+    <label class="form-label" for="id">Codigo</label>
+  </div>
+
   <div class="form-outline mb-4">
     <input type="text" name="uname" class="form-control" />
     <label class="form-label" for="uname">Usuario</label>
@@ -12,8 +18,18 @@
 
   <!-- Email input -->
   <div class="form-outline mb-4">
-    <input type="email" name="mail" class="form-control" />
-    <label class="form-label" for="mail">Email</label>
+    <input type="text" name="first_name" class="form-control" />
+    <label class="form-label" for="first_name">Nombre</label>
+  </div>
+
+  <div class="form-outline mb-4">
+    <input type="text" name="last_name" class="form-control" />
+    <label class="form-label" for="last_name">Apellidos</label>
+  </div>
+
+  <div class="form-outline mb-4">
+    <input type="text" name="phone_number" class="form-control" />
+    <label class="form-label" for="phone_number">Telefono</label>
   </div>
 
    <!-- Pass input -->
